k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: app-nottambulo-ingress
 namespace: app-nottambulo
 labels:
  app: app-nottambulo
spec:
 rules:
  - host: app-nottambulo.local
    http:
     paths:
      - path: /api
        pathType: Prefix
        backend:
         service:
          name: backend-svc
          port:
           number: 8080
      - path: /auth
        pathType: Prefix
        backend:
         service:
          name: keycloak
          port:
           number: 8080
      - path: /
        pathType: Prefix
        backend:
         service:
          name: frontend-svc
          port:
           number: 80
